# RAG-over-a-real-document-corpus

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  config.py  db.py  logging.py  main.py
app/api/: deps.py  routes.py
app/ingestion/: __init__.py  chunker.py  cleaner.py  embedder.py  loader.py  manifest.py  pipeline.py  store.py
app/llm/: __init__.py  anthropic_client.py  base.py  deepinfra_client.py  factory.py  openai_client.py  prompts.py
app/models/: __init__.py  schemas.py
app/retrieval/: __init__.py  bm25.py  hybrid.py  rerank.py  types.py  vector.py
app/services/: __init__.py  ask.py  documents.py  ingest.py  search.py
data/: corpus_manifest.json
docs/: screenshots.md
eval/: __init__.py  eval_set.json  judge.py  run_eval.py
eval/results/: README.md
scripts/: capture_local.mjs  capture_screenshots.mjs  download_corpus.py  download_via_browser.mjs  ingest_cli.py  init_db.sql
tests/: conftest.py  test_bm25_tokenize.py  test_chunker.py  test_citation_resolution.py  test_cleaner.py  test_health_endpoint.py  test_hybrid_merge.py  test_refusal.py
web/: .dockerignore  .env.local.example  .gitignore  Dockerfile  README.md  next.config.ts  package.json  pnpm-lock.yaml  tsconfig.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/about/: page.tsx
web/app/documents/: page.tsx
web/app/search/: page.tsx
web/components/: answer-card.tsx  ask-form.tsx  chunk-row.tsx  citation-card.tsx  citation-list.tsx  document-card.tsx  empty-state.tsx  error-state.tsx  example-questions.tsx  footer.tsx  header.tsx  loading-state.tsx  query-provider.tsx  regulator-filter.tsx  top-k-selector.tsx
web/components/ui/: alert.tsx  badge.tsx  button.tsx  input.tsx  scroll-area.tsx  textarea.tsx
web/lib/: api.ts  corpus-stats.ts  examples.ts  queries.ts  schemas.ts  utils.ts
