[project]
name = "regrag"
version = "0.1.0"
description = "RAG over Indian financial regulatory documents (SEBI + RBI)"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Ajay Tambe" }]

dependencies = [
    # Web
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.12",

    # Database
    "psycopg[binary,pool]>=3.2.0",
    "pgvector>=0.3.0",

    # Retrieval
    "rank-bm25>=0.2.2",
    "sentence-transformers>=3.2.0",
    "numpy>=1.26.0,<2.2.0",
    "scipy>=1.13.0",
    "scikit-learn>=1.5.0",

    # PDF
    "pypdf>=5.0.0",
    "pdfplumber>=0.11.0",

    # LLM clients
    "anthropic>=0.39.0",
    "openai>=1.50.0",
    "tiktoken>=0.8.0",

    # Logging / utils
    "structlog>=24.4.0",
    "tenacity>=9.0.0",
    "orjson>=3.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "types-requests",
]

[project.scripts]
regrag-ingest = "scripts.ingest_cli:main"
regrag-eval = "eval.run_eval:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*", "eval*", "scripts*"]
exclude = ["tests*", "data*"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["data", ".venv", "models"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "N",   # pep8-naming
    "C4",  # comprehensions
    "RUF",
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # function call in argument defaults (FastAPI Depends)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_any_generics = true
no_implicit_optional = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unreachable = true
ignore_missing_imports = true
exclude = ["tests/", "data/", "build/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow",
    "integration: requires running services",
]
